docs/apache-airflow-providers-smtp/1.5.0/_sources/_api/airflow/providers/smtp/notifications/smtp/index.rst.txt
:py:mod:`airflow.providers.smtp.notifications.smtp`
===================================================

.. py:module:: airflow.providers.smtp.notifications.smtp


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.smtp.notifications.smtp.SmtpNotifier




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.smtp.notifications.smtp.send_smtp_notification


.. py:class:: SmtpNotifier(from_email, to, subject, html_content, files = None, cc = None, bcc = None, mime_subtype = 'mixed', mime_charset = 'utf-8', custom_headers = None, smtp_conn_id = SmtpHook.default_conn_name)


   Bases: :py:obj:`airflow.notifications.basenotifier.BaseNotifier`

   SMTP Notifier.

   :param smtp_conn_id: The :ref:`smtp connection id <howto/connection:smtp>`
       that contains the information used to authenticate the client.

   .. py:attribute:: template_fields
      :value: ('from_email', 'to', 'subject', 'html_content', 'files', 'cc', 'bcc', 'mime_subtype',...

      

   .. py:method:: hook()

      Smtp Events Hook.


   .. py:method:: notify(context)

      Send a email via smtp server.



.. py:data:: send_smtp_notification

   

